# hicloud

./: .gitignore  CHANGELOG.md  README.md  activate_hicloud.sh  conftest.py  hicloud.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
commands/: __init__.py  action.py  backup.py  base.py  batch.py  config.py  firewall.py  floating_ip.py  image.py  iso.py  keys.py  loadbalancer.py  location.py  metrics.py  network.py  placement_group.py  pricing.py  primary_ip.py  project.py  snapshot.py  vm.py  volume.py
lib/: __init__.py  api.py  config.py  console.py
tests/: TEST_PLAN.md
tests/commands/: test_action.py  test_backup.py  test_base.py  test_batch.py  test_config.py  test_firewall.py  test_floating_ip.py  test_image.py  test_iso.py  test_keys.py  test_loadbalancer.py  test_location_servertype.py  test_metrics.py  test_network.py  test_placement_group.py  test_pricing.py  test_primary_ip.py  test_project.py  test_snapshot.py  test_vm.py  test_volume.py
tests/lib/: test_api_action.py  test_api_backup.py  test_api_batch.py  test_api_core.py  test_api_firewall.py  test_api_floating_ip.py  test_api_image.py  test_api_iso.py  test_api_keys.py  test_api_loadbalancer.py  test_api_location.py  test_api_metrics.py  test_api_network.py  test_api_placement_group.py  test_api_pricing.py  test_api_primary_ip.py  test_api_project.py  test_api_snapshot.py  test_api_vm.py  test_api_volume.py  test_config_manager.py  test_console.py
utils/: __init__.py  colors.py  constants.py  formatting.py  prompts.py  spinner.py
(+2 files in other folders)
